--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -1,3 +1,7 @@
+.main-img {
+  margin-top: 135px;
+}
+
 .video-button {
   position: relative;
 }
@@ -51,7 +55,6 @@
 .Last {
   background: rgba(241, 241, 241, 1);
 }
-
 
 .main-box {
   box-shadow: 0px 0px 15px 0px #cdcd;
