--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -48,3 +48,15 @@
 .allicon:hover {
   color: #000000;
 }
+
+
+@media (max-width: 640px) {
+  .tittle {
+    padding-left: 5px;
+  }
+
+  .arrow{
+    padding-right: 5px;
+  }
+
+}
